Enhanced UI with premium glassmorphism design and consistent navigation

--- a/admin_manage_users.html
+++ b/admin_manage_users.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,18 @@
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/dashboard.css">
 </head>
+
 <body>
   <nav class="navbar">
     <div class="navbar-container">
-      <a href="admin_dashboard.html" class="navbar-brand">CampusHire</a>
-      <ul class="navbar-menu">
+      <a href="admin_dashboard.html" class="navbar-brand">
+        <span>CampusHire</span>
+      </a>
+      <button class="navbar-toggle" id="navbar-toggle">☰</button>
+      <ul class="navbar-menu" id="navbar-menu">
         <li class="navbar-item"><a href="admin_dashboard.html">Dashboard</a></li>
-        <li class="navbar-item"><a href="admin_manage_users.html" class="active">Manage Users</a></li>
-        <li class="navbar-item"><a href="admin_manage_jobs.html">Manage Jobs</a></li>
+        <li class="navbar-item"><a href="admin_manage_users.html" class="active">Users</a></li>
+        <li class="navbar-item"><a href="admin_manage_jobs.html">Jobs</a></li>
         <li class="navbar-item"><a href="admin_reports.html">Reports</a></li>
       </ul>
       <div class="navbar-right">
@@ -64,4 +69,5 @@
   <script src="js/navbar-toggle.js"></script>
   <script type="module" src="js/admin_manage_users.js"></script>
 </body>
+
 </html>
