--- a/job_board.html
+++ b/job_board.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,13 +9,18 @@
   <link rel="stylesheet" href="css/navbar.css" />
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
+
 <body>
   <nav class="navbar">
     <div class="navbar-container">
-      <a href="student_dashboard.html" class="navbar-brand">CampusHire</a>
-      <ul class="navbar-menu">
+      <a href="student_dashboard.html" class="navbar-brand">
+        <span>CampusHire</span>
+      </a>
+      <button class="navbar-toggle" id="navbar-toggle">☰</button>
+      <ul class="navbar-menu" id="navbar-menu">
         <li class="navbar-item"><a href="student_dashboard.html">Dashboard</a></li>
         <li class="navbar-item"><a href="job_board.html" class="active">Browse Jobs</a></li>
+        <li class="navbar-item"><a href="student_applications.html">My Applications</a></li>
       </ul>
       <div class="navbar-right">
         <div class="navbar-profile">
@@ -66,4 +72,5 @@
   <script src="js/navbar-toggle.js"></script>
   <script type="module" src="js/job_board.js"></script>
 </body>
+
 </html>
