--- a/recruiter_view_profile.html
+++ b/recruiter_view_profile.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>View Student Profile | CampusHire</title>
   <link rel="stylesheet" href="css/theme.css" />
+  <link rel="stylesheet" href="css/navbar.css" />
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
+
 <body>
+  <nav class="navbar">
+    <div class="navbar-container">
+      <a href="recruiter_dashboard.html" class="navbar-brand">
+        <span>CampusHire</span>
+      </a>
+      <button class="navbar-toggle" id="navbar-toggle">☰</button>
+      <ul class="navbar-menu" id="navbar-menu">
+        <li class="navbar-item"><a href="recruiter_dashboard.html">Dashboard</a></li>
+        <li class="navbar-item"><a href="recruiter_view_jobs.html" class="active">My Jobs</a></li>
+      </ul>
+      <div class="navbar-right">
+        <div class="navbar-profile">
+          <span id="navRecruiterName">Recruiter</span>
+        </div>
+        <button id="navLogoutBtn" class="navbar-logout-btn">Logout</button>
+      </div>
+    </div>
+  </nav>
   <div class="dashboard-container">
     <div style="margin-bottom:16px;">
       <button class="secondary" onclick="window.history.back()">Back</button>
@@ -29,6 +50,8 @@
   </div>
 
   <!-- Linked external script -->
+  <script src="js/navbar-toggle.js"></script>
   <script type="module" src="js/recruiter_view_profile.js"></script>
 </body>
+
 </html>
