Fix button spacing and student profile image upload

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -56,7 +56,7 @@
 
     <div class="dashboard-section">
       <h3>Quick Management</h3>
-      <div class="btn-group">
+      <div class="btn-group" style="margin-top: 16px;">
         <button onclick="window.location.href='admin_manage_users.html'">Manage Users</button>
         <button onclick="window.location.href='admin_manage_jobs.html'">Manage Jobs</button>
         <button onclick="window.location.href='admin_reports.html'">View Reports</button>
