--- a/admin_manage_users.html
+++ b/admin_manage_users.html
@@ -49,7 +49,7 @@
             <option value="recruiter">Recruiter</option>
           </select>
         </div>
-        <div class="col" style="max-width:140px;">
+        <div class="col" style="max-width:140px; margin-top: 24px;">
           <label>&nbsp;</label>
           <button id="searchBtn">Search</button>
         </div>
