--- a/recruiter_dashboard.html
+++ b/recruiter_dashboard.html
@@ -64,7 +64,7 @@
         <label for="jobDescription">Job Description</label>
         <textarea id="jobDescription" placeholder="Describe the role, requirements, and benefits..."></textarea>
 
-        <button type="button" id="postJobBtn">Post Job</button>
+        <button type="button" id="postJobBtn" style="margin-top: 16px;">Post Job</button>
         <p id="jobStatus" class="small"></p>
       </form>
     </div>
@@ -76,7 +76,7 @@
     </div>
 
     <!-- NAVIGATION SECTION -->
-    <div class="center" style="margin-top:20px; margin-bottom:20px;">
+    <div class="center" style="margin: 32px 0;">
       <div class="btn-group">
         <button class="secondary" onclick="window.location.href='recruiter_view_jobs.html'">View Applicants</button>
       </div>
