--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -118,7 +118,7 @@
       <label for="workDescription">Describe your role (short)</label>
       <textarea id="workDescription" placeholder="Describe responsibilities, achievements"></textarea>
     </div>
-    <div class="center">
+    <div class="center" style="margin: 32px 0;">
       <button id="saveProfileBtn">Save Profile</button>
       <p id="profileStatus" class="small"></p>
     </div>
