--- a/admin_reports.html
+++ b/admin_reports.html
@@ -115,7 +115,7 @@
             <option value="">Loading...</option>
           </select>
         </div>
-        <div class="col" style="max-width:180px;">
+        <div class="col" style="max-width:180px; margin-top: 24px;">
           <label>&nbsp;</label>
           <button id="generateReportBtn">Generate Report</button>
         </div>
