--- a/job_board.html
+++ b/job_board.html
@@ -55,7 +55,7 @@
             <option value="oldest">Oldest First</option>
           </select>
         </div>
-        <div class="col" style="max-width:140px;">
+        <div class="col" style="max-width:140px; margin-top: 24px;">
           <label>&nbsp;</label>
           <button id="searchBtn">Search</button>
         </div>
