--- a/student_profile_setup.html
+++ b/student_profile_setup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -10,6 +11,7 @@
     .auth-page {
       background: linear-gradient(135deg, #f0f4f8 0%, #e8f0ff 50%, #f0f4f8 100%);
     }
+
     .profile-setup-container {
       width: 100%;
       max-width: 600px;
@@ -20,6 +22,7 @@
       animation: slideUpFade 0.6s ease-out;
       margin: 0 auto;
     }
+
     .profile-setup-container h2 {
       margin-top: 0;
       margin-bottom: 8px;
@@ -27,14 +30,17 @@
       text-align: center;
       color: var(--primary-600);
     }
+
     .profile-setup-container p {
       text-align: center;
       margin-bottom: 20px;
       color: var(--muted);
     }
+
     .progress-section {
       margin-bottom: 24px;
     }
+
     .progress-bar {
       width: 100%;
       height: 8px;
@@ -43,6 +49,7 @@
       overflow: hidden;
       margin-bottom: 8px;
     }
+
     .progress-fill {
       height: 100%;
       background: linear-gradient(90deg, var(--primary), var(--primary-600));
@@ -50,20 +57,24 @@
       transition: width 0.4s ease;
       border-radius: 4px;
     }
+
     .progress-text {
       text-align: center;
       font-size: 0.9rem;
       color: var(--muted);
       font-weight: 600;
     }
+
     .form-section {
       margin-bottom: 20px;
       padding-bottom: 16px;
       border-bottom: 1px solid #e6edf6;
     }
+
     .form-section:last-child {
       border-bottom: none;
     }
+
     .form-section h3 {
       font-size: 1rem;
       color: #0f172a;
@@ -73,41 +84,50 @@
       align-items: center;
       gap: 8px;
     }
+
     .form-section .status-icon {
       font-size: 1.2rem;
     }
+
     .form-section label {
       margin-top: 10px;
       margin-bottom: 6px;
     }
+
     .form-section input,
     .form-section textarea {
       margin-bottom: 10px;
     }
+
     .btn-group {
       display: flex;
       gap: 12px;
       margin-top: 24px;
       justify-content: center;
     }
+
     .btn-group button {
       flex: 1;
       min-width: 140px;
     }
+
     .status-msg {
       text-align: center;
       margin-top: 12px;
       font-size: 0.9rem;
       font-weight: 600;
     }
+
     .status-msg.success {
       color: var(--success);
     }
+
     .status-msg.error {
       color: var(--danger);
     }
   </style>
 </head>
+
 <body>
   <div id="animated-bg"></div>
 
@@ -128,6 +148,25 @@
 
       <!-- Profile Form -->
       <form id="profileSetupForm">
+        <!-- Profile Image Section -->
+        <div class="form-section center">
+          <h3>
+            <span class="status-icon" id="image-icon">○</span>
+            Profile Picture
+          </h3>
+          <div style="position: relative; width: 120px; height: 120px; margin: 0 auto 16px;">
+            <img id="profileImagePreview" src="https://via.placeholder.com/120" alt="Profile Preview"
+              style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%; border: 3px solid white; box-shadow: var(--shadow-sm); cursor: pointer;">
+            <div
+              style="position: absolute; bottom: 0; right: 0; background: var(--primary); color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; pointer-events: none;">
+              <span>+</span>
+            </div>
+          </div>
+          <input type="file" id="profileImage" accept="image/*" style="display: none;">
+          <button type="button" class="secondary small" onclick="document.getElementById('profileImage').click()">Upload
+            Photo</button>
+        </div>
+
         <!-- About Section -->
         <div class="form-section">
           <h3>
@@ -190,4 +229,5 @@
   <script type="module" src="js/animated_bg.js"></script>
   <script type="module" src="js/student_profile_setup.js"></script>
 </body>
+
 </html>
