--- a/admin_register.html
+++ b/admin_register.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Registration | CampusHire</title>
   <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="css/auth.css" />
+  <script src="js/theme-toggle.js"></script>
 </head>
+
 <body>
   <div id="animated-bg"></div>
 
@@ -99,4 +102,5 @@
     });
   </script>
 </body>
+
 </html>
