--- a/admin_reports.html
+++ b/admin_reports.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/theme.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/dashboard.css">
+  <script src="js/theme-toggle.js"></script>
 </head>
 
 <body>
