--- a/register.html
+++ b/register.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register - CampusHire</title>
   <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="css/auth.css" />
+  <script src="js/theme-toggle.js"></script>
 </head>
+
 <body>
   <div id="animated-bg"></div>
 
@@ -41,4 +44,5 @@
   <script type="module" src="js/animated_bg.js"></script>
   <script type="module" src="js/auth.js"></script>
 </body>
+
 </html>
