chore: update homepage features and fix mobile navbar contrast

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <h3>Why CampusHire?</h3>
         <ul>
           <li>Access exclusive student-focused listings</li>
-          <li>Create a stunning digital CV in minutes</li>
+          <li>Build your professional profile</li>
           <li>Direct connection with campus recruiters</li>
-          <li>Real-time application tracking</li>
-          <li>Skill-based matching algorithm</li>
+          <li>Basic application tracking</li>
+          <li>Find relevant opportunities</li>
         </ul>
       </div>
     </div>
